[package]
name = "rumour"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]

[dependencies]
bincode = "0.8"
bytes = "0.4"
clap = "2.26"
error-chain = "0.11"
futures = "0.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"